fix(frontend): Fix landing items spacing
I was never happy with the layout of the landing page, so took this opportunity to remedy it.
I have removed the padding on the sides of the landing page content container, which was forcing the width, and just aligned the entire content container to the center using flex. This allows the page to reduce until there is no more whitespace before adding the scrollbars. I think this is an appropriate solution for the short-term.

I also added a right-margin to the items, so that they can never touch, even if space runs out between them.

--- a/client/src/landing/landing.module.css
+++ b/client/src/landing/landing.module.css
@@ -1,10 +1,17 @@
 .landing {
   display: flex;
+  justify-content: center;
+  height: 100%;
+  background-color: #fff;
+}
+
+.landingContent {
+  display: flex;
   flex-direction: column;
   justify-content: space-around;
+  align-items: center;
   position: relative;
   min-height: 100%;
-  padding: 0 20rem;
   background-color: #fff;
   color: #101010;
 }
@@ -14,6 +21,7 @@
 .items {
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 
 .logo,
@@ -51,6 +59,7 @@
 
 .item {
   width: 17rem;
+  margin-right: 1rem;
 }
 
 .image {
